--- a/less/blocks/catalog.less
+++ b/less/blocks/catalog.less
@@ -5,6 +5,20 @@
   margin-bottom: 30px;
   border: 1px solid @border-color;
 }
+.catalog__item:hover {
+  box-shadow: -6px 0 white, 6px 0 white, 0 6px 5px -2px grey;
+
+}
+.item-content__title:hover{
+  color:@color-text-hover;
+}
+.catalog__item:active {
+  box-shadow: -6px 0 white, 6px 0 white, 0 6px 3px -2px grey;
+
+}
+.item-content__title:active {
+  color:#cacaca;
+}
 
 .item-content__title {
   padding-bottom: 15px;
