--- a/less/blocks/featured.less
+++ b/less/blocks/featured.less
@@ -73,14 +73,11 @@
 }
 
 .featured__buy:active {
-  background-color: @p-color;
-  color: #858585;
+  color: @color-text-hover;
 }
+
 //планшет
 @media @tablet-widths {
-  // .reviews{
-  //   background: url("../img/review@1x.jpg") no-repeat ;
-  // }
   .featured {
     width: 668px;
     margin: 0 auto;
