--- a/less/blocks/order-form.less
+++ b/less/blocks/order-form.less
@@ -22,6 +22,14 @@
   line-height: 16px;
   padding: 16px 0;
 }
+.button-order-form:hover {
+  background-color: @p-color;
+  color: #ffffff;
+}
+
+.button-order-form:active {
+  color: @color-text-hover;
+}
 
 .order-form__must-field {
   font-size: 14px;
