--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -67,6 +67,14 @@
   line-height: 20px;
   font-weight: bold;
 }
+.reviews__write-reviws:hover {
+  background-color: @p-color;
+  color: #ffffff;
+}
+.reviews__write-reviws:active {
+  color: @color-text-hover;
+}
+
 //планшет
 @media @tablet-widths {
   .reviews {
