--- a/less/blocks/user-contacts.less
+++ b/less/blocks/user-contacts.less
@@ -34,6 +34,11 @@
   margin-bottom: 30px;
 }
 
+.user-contacts-item:hover{
+  border-color: @border-hover;
+}
+
+
 .user-contacts__input-title {
   font-size: 17px;
   line-height: 18px;
