--- a/less/blocks/user-info.less
+++ b/less/blocks/user-info.less
@@ -31,6 +31,9 @@
   border-bottom: 2px solid black;
   margin-bottom: 22px;
 }
+.user-info-item:hover{
+  border-color: @border-hover;
+}
 
 .user-info__input-title {
   font-size: 17px;
@@ -46,6 +49,10 @@
   border: none;
   margin-bottom: 15px;
   color: @form-text-color;
+}
+
+.user-info__input-value:hover{
+  border-color: @border-hover;
 }
 
 .user-info__header--padding {
