--- a/less/variables.less
+++ b/less/variables.less
@@ -3,6 +3,8 @@
 @p-color: #444444;
 @form-text-color: #d2d2d2;
 @border-color: #ececec;
+@border-hover: #62d1ba;
+@border-active: #c7c7c7;
 @color-text-hover: #8d8d8d;
 @tablet-widths: ~"(min-width: 768px)";
 @desktop-widths: ~"(min-width: 1150px)";
