--- a/less/blocks/additionally.less
+++ b/less/blocks/additionally.less
@@ -24,6 +24,9 @@
     resize: none;
     padding: 15px 30px 15px 15px;
   }
+  & textarea:hover{
+    border-color: @border-hover;
+  }
 }
 //@tablet
 @media @tablet-widths {
