--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -41,6 +41,16 @@
   margin: 0 34px 32px;
   width: 72%;
 }
+
+.video__make-order:hover {
+  background-color: @p-color;
+  color: #ffffff;
+}
+
+.video__make-order:active {
+  color: @color-text-hover;
+}
+
 //tablet
 @media @tablet-widths {
   .video {
