--- a/less/style.less
+++ b/less/style.less
@@ -19,3 +19,4 @@
 @import "blocks/user-info.less";
 @import "blocks/user-contacts.less";
 @import "blocks/additionally.less";
+@import "blocks/popap.less";
