--- a/less/variables.less
+++ b/less/variables.less
@@ -8,6 +8,7 @@
 @color-text-hover: #8d8d8d;
 @tablet-widths: ~"(min-width: 768px)";
 @desktop-widths: ~"(min-width: 1150px)";
+@mobile-widths-only: ~"(max-width: 767px)";
 
 .visually-hidden {
   position: absolute;
