начало переверстки меню

--- a/less/blocks/page-preview.less
+++ b/less/blocks/page-preview.less
@@ -1,6 +1,8 @@
 .page-preview {
   padding: 0 30px;
   background: url("../img/hero-mobile@1x.jpg") 50% 0 no-repeat;
+  border-top: 1px solid @border-color;
+  background-color: #f9f9f9;
 }
 
 .page-preview__title {
@@ -8,6 +10,10 @@
   margin: 0 auto;
   padding-top: 76px;
   padding-bottom: 120px;
+}
+.page-preview__production{
+  width: 320px;
+  margin: 0 auto;
 }
 
 .page-preview__item {
