--- a/less/style.less
+++ b/less/style.less
@@ -19,4 +19,5 @@
 @import "blocks/user-info.less";
 @import "blocks/user-contacts.less";
 @import "blocks/additionally.less";
+@import "blocks/main-nav.less";
 @import "blocks/popap.less";
