--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -1,18 +1,16 @@
 .page-header {
+  border-bottom: 1px solid @border-color;
   .container();
   background-color: #ffffff;
-  border-bottom: 1px solid @border-color;
   width: 100%;
   &__text-delivery{
     display:none;
   }
   &__wrapper {
     width: 100%;
+    min-height: 80px;
   }
 }
-
-
-
 
 
 //tablet
