--- a/less/style.less
+++ b/less/style.less
@@ -20,4 +20,5 @@
 @import "blocks/user-contacts.less";
 @import "blocks/additionally.less";
 @import "blocks/main-nav.less";
+@import "blocks/zigzag-line.less";
 @import "blocks/popap.less";
