--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -5,7 +5,7 @@
 }
 
 .contacts {
-  padding-top: 43px;
+  padding-top: 35px;
   margin-bottom: 39px;
 
   &__title {
@@ -27,6 +27,8 @@
 
   &__write-us {
     .btn();
+    width: 260px;
+    margin: 0 auto;
   }
 
   &__write-us:hover {
@@ -65,7 +67,7 @@
 @media @tablet-widths {
   .contacts {
     padding-bottom: 18px;
-    padding-top: 93px;
+    padding-top: 85px;
     width: 100%;
 
     &__wrapper {
@@ -132,8 +134,9 @@
 @media @desktop-widths {
   .contacts {
     width: 875px;
-    margin: 69px auto 83px;
+    margin: 26px auto 83px;
     padding-left: 175px;
+    padding-top: 10px;
 
     &__wrapper {
       float: left;
