--- a/less/blocks/main-header.less
+++ b/less/blocks/main-header.less
@@ -9,10 +9,21 @@
 }
 @media @tablet-widths {
   .main-header {
+    position: relative;
     margin-bottom: 85px;
 
     &__title {
       padding-top: 94px;
+      &::after{
+        content: "";
+        right: 0px;
+        bottom: 0px;
+        width: 100%;
+        height: 15px;
+        position: absolute;
+        background: url("../img/bg-zigzag-fill.svg") no-repeat;
+        background-size: 100% auto;
+      }
 
       & h1 {
         font-size: 43px;
