--- a/less/blocks/page-preview.less
+++ b/less/blocks/page-preview.less
@@ -1,15 +1,14 @@
 .page-preview {
   padding: 0 30px;
   background: url("../img/hero-mobile@1x.jpg") 50% 0 no-repeat;
-  border-top: 1px solid @border-color;
   background-color: #f9f9f9;
 }
 
 .page-preview__title {
   width: 260px;
   margin: 0 auto;
-  padding-top: 76px;
-  padding-bottom: 120px;
+  padding-top: 68px;
+  padding-bottom: 123px;
 }
 .page-preview__production{
   width: 320px;
@@ -23,7 +22,7 @@
   background-color: @mint-color;
   margin-left: -30px;
   margin-right: -30px;
-  padding: 26px 160px 29px 29px;
+  padding: 26px 200px 29px 29px;
 
   & p {
     font-size: 19px;
@@ -86,20 +85,32 @@
     flex-wrap: wrap;
 
     &__production {
+      position: relative;
       margin: 0;
       width: 100%;
       display: flex;
       flex-direction: row;
+      background: url("../img/icon-toy.svg") no-repeat;
+      &::after{
+        content: "";
+        right: 0px;
+        bottom: 0px;
+        width: 100%;
+        height: 10px;
+        position: absolute;
+        background: url("../img/bg-zigzag-fill.svg") no-repeat;
+        background-size: 100% auto;
+      }
     }
 
     &__title {
-      height: 430px;
+      height: 435px;
       width: 100%;
 
       & h1 {
         font-size: 43px;
         line-height: 50px;
-        padding-top: 77px;
+        padding-top: 84px;
       }
     }
 
@@ -129,6 +140,11 @@
 @media @desktop-widths {
   .page-preview {
     width: 1050px;
+    &__production::after{
+      width: 100%;
+      height: 15px;
+      background-size: 100% auto;
+    }
 
     &__title h1 {
       font-size: 53px;
