--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -1,9 +1,13 @@
 .reviews {
-  margin: 0 auto;
-  width: 260px;
+  position: relative;
   margin-top: 28px;
-  margin-bottom: 44px;
+  padding-bottom: 52px;
+  &-wrapper{
+    margin: 0 auto;
+    width: 260px;
+  }
 }
+
 
 .reviews__title {
   margin-bottom: 24px;
@@ -137,13 +141,14 @@
 }
 @media @desktop-widths {
   .reviews {
-    margin: 55px auto 0;
-    width: 1050px;
+    margin: 58px auto;
+    width: 100%;
 
     &-wrapper {
       width: 875px;
       padding-left: 175px;
       padding-top: 70px;
+      padding-bottom: 40px;
     }
 
     &__title {
