линии на страницах

--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -189,7 +189,7 @@
     &--catalog{
       order: 1;
       width: 184px;
-      padding-top: 30px;
+      padding-top: 29px;
       padding-bottom:0px;
       border-right: 1px solid @border-color;
       & a {
@@ -221,6 +221,7 @@
       order: 6;
       width: 184px;
       & a {
+        text-align: left;
         font-size: 15px;
         line-height: 24px;
       }
