--- a/less/blocks/order-form.less
+++ b/less/blocks/order-form.less
@@ -39,6 +39,9 @@
 }
 //tablet
 @media @tablet-widths {
+  .order-form-header{
+    position: relative;
+  }
   .order-form-header__title {
     padding-top: 92px;
     padding-bottom: 83px;
@@ -47,6 +50,16 @@
     & h1 {
       font-size: 43px;
       line-height: 50px;
+    }
+    &::after{
+      content: "";
+      right: 0px;
+      bottom: 0px;
+      width: 100%;
+      height: 10px;
+      position: absolute;
+      background: url("../img/bg-zigzag-fill.svg") no-repeat;
+      background-size: 100% auto;
     }
   }
 
@@ -88,15 +101,21 @@
       padding-bottom: 20px;
       margin-bottom: 73px;
 
-      &__title h1 {
-        font-size: 53px;
-        line-height: 57px;
+      &__title{
+        &::after{
+          height: 16px;
+        }
+        & h1 {
+         font-size: 53px;
+         line-height: 57px;
+       }
       }
+
     }
 
     &__must-field {
       color: @p-color;
-      width: 42%;
+      width: 46%;
       bottom: -4px;
     }
 
