--- a/less/blocks/main-header.less
+++ b/less/blocks/main-header.less
@@ -19,7 +19,7 @@
         right: 0px;
         bottom: 0px;
         width: 100%;
-        height: 15px;
+        height: 10px;
         position: absolute;
         background: url("../img/bg-zigzag-fill.svg") no-repeat;
         background-size: 100% auto;
@@ -36,6 +36,11 @@
 @media @desktop-widths {
   .main-header {
     &__title {
+      margin-bottom: 0;
+      padding-bottom: 100px;
+      &::after{
+        height: 20px;
+      }
       & h1 {
         font-size: 53px;
         line-height: 57px;
