--- a/less/blocks/user-contacts.less
+++ b/less/blocks/user-contacts.less
@@ -74,6 +74,12 @@
   top: -2px;
   right: -5px;
 }
+
+.user-email__icon-email:hover,
+.user-phone__icon-phone:hover{
+  border-bottom: 2px solid @border-hover;
+}
+
 //@tablet
 @media @tablet-widths {
   .user-contacts {
