--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -41,6 +41,8 @@
 
 @media @desktop-widths {
   .page-header {
+    width: 100%;
+    padding: 0;
     &__wrapper {
       width: 1050px;
       margin: 0 auto;
