--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -30,9 +30,9 @@
 .video-player {
   width: 100%;
   min-height: 150px;
-  background: url("../img/video-mobile@1x.jpg") 100% auto no-repeat;
+  background: url("../img/video-mobile@1x.jpg") no-repeat;
   @media(min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-    background: url("../img/video-mobile@2x.jpg") 100% auto no-repeat;
+    background: url("../img/video-mobile@2x.jpg") no-repeat;
   }
 }
 
@@ -74,9 +74,9 @@
     height: 451px;
     border-bottom: 1px solid @border-color;
     background-size: cover;
-    background: url("../img/video-tablet@1x.jpg") 100% auto no-repeat;
+    background: url("../img/video-tablet@1x.jpg") no-repeat;
     @media(min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-      background: url("../img/video-tablet@2x.jpg") 100% auto no-repeat;
+      background: url("../img/video-tablet@2x.jpg") no-repeat;
     }
   }
 
@@ -120,9 +120,9 @@
       width: 65%;
       float: left;
       border-bottom: none;
-      background: url("../img/video-desktop@1x.jpg") 100% auto no-repeat;
+      background: url("../img/video-desktop@1x.jpg") no-repeat;
       @media(min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-        background: url("../img/video-desktop@2x.jpg") 100% auto no-repeat;
+        background: url("../img/video-desktop@2x.jpg") no-repeat;
       }
     }
 
