--- a/less/blocks/filter-color.less
+++ b/less/blocks/filter-color.less
@@ -132,6 +132,9 @@
     left: 11px;
     top: 2px;
   }
+  .filter-type__header--padding-top{
+    padding-top: 27px;
+  }
 }
 //desktop
 @media @desktop-widths {
