--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -241,6 +241,7 @@
     }
     &--cart{;
       order: 5;
+
     }
     &--new{
       padding-top: 16px;
@@ -251,6 +252,9 @@
         font-size: 15px;
         line-height: 24px;
       }
+    }
+    &:last-child{
+      border-bottom: none;
     }
     &--sale{
       padding-top: 16px;
