--- a/less/blocks/map.less
+++ b/less/blocks/map.less
@@ -13,6 +13,7 @@
   .map {
     width: 100%;
     margin: 34px 0 0 0;
+    padding-bottom: 4px;
     background: url("../img/map-tablet@1x.jpg") no-repeat;
     background-size:100% 457px;
     @media(min-resolution: 144dpi), (min-resolution: 1.5dppx) {
