--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -101,8 +101,8 @@
 
     &-wrapper {
       margin: 0 auto;
-      width: 668px;
-      padding: 76px 0 0;
+      width: 718px;
+      padding: 76px 0 0 50px;
       position: relative;
       background: url("../img/review@1x.jpg") no-repeat;
       @media(min-resolution: 144dpi), (min-resolution: 1.5dppx) {
@@ -121,7 +121,7 @@
       position: absolute;
       width: 171px;
       top: 79px;
-      right: 0;
+      right: 49px;;
     }
 
     &__item {
