--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -344,4 +344,11 @@
     z-index: 2;
     width: 100%
   }
+  .main-nav--nojs .main-nav-toggle{
+    display: none;
+  }
+  .main-nav--nojs .main-nav__wrapper {
+  position: static;
+  }
+
 }
