--- a/less/blocks/map.less
+++ b/less/blocks/map.less
@@ -29,10 +29,10 @@
     margin: 0;
     padding: 0;
     width: 60%;
-  }
-  background: url("../img/video-desktop@1x.jpg") 100% 0 no-repeat;
-  @media(min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-    background: url("../img/video-desktop@2x.jpg") 100% 0 no-repeat;
+    background: url("../img/map-desktop@1x.jpg") 100% 0 no-repeat;
+    @media(min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    background: url("../img/map-desktop@2x.jpg") 100% 0 no-repeat;
     background-size:100% 457px;
+    }
   }
 }
