--- a/less/blocks/catalog.less
+++ b/less/blocks/catalog.less
@@ -45,11 +45,13 @@
   width: 90px;
   display: inline-block;
   word-wrap: break-word;
+  vertical-align: top;
 }
 
 .catalog-item-footer__basket {
   width: 109px;
   display: inline-block;
+  vertical-align: top;
   height: 21px;
   background-position: right;
   text-align: right;
