--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -29,6 +29,7 @@
   width: 25px;
   height: 21px;
   display: inline-block;
+  vertical-align: top;
 }
 .page-footer__logo:hover{
   fill: @color-icon-hover;
@@ -54,6 +55,7 @@
   width: 15px;
   height: 28px;
   display: inline-block;
+  vertical-align: top;
 }
 .social-links__fb:hover{
   & path{
@@ -70,6 +72,7 @@
   width: 23px;
   height: 20px;
   display: inline-block;
+  vertical-align: top;
 }
 .social__icon-twitter:hover {
   & path{
@@ -96,6 +99,7 @@
     width: 28px;
     height: 34px;
     display: inline-block;
+    vertical-align: top;
     margin-left: 19px;
     margin-bottom: -9px;
   }
