--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -45,6 +45,7 @@
   width: 130px;
   height: 50px;
   display: inline-block;
+  vertical-align: top;
   cursor: pointer;
   &:hover{
     opacity: 0.5;
@@ -62,6 +63,7 @@
   width: 130px;
   height: 50px;
   display: inline-block;
+  vertical-align: top;
   cursor: pointer;
   margin-left: -5px;
   &:hover{
