--- a/less/blocks/map.less
+++ b/less/blocks/map.less
@@ -7,8 +7,13 @@
     background: url("../img/map-mobile@2x.jpg") no-repeat;
     background-size:100% 457px;
   }
-}
 
+}
+.map iframe {
+  width: 100%;
+  height: 457px;
+  border-width:1px;
+}
 @media @tablet-widths {
   .map {
     width: 100%;
