--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -142,10 +142,13 @@
   .about {
     margin-top: 56px;
     width: 700px;
-
     &__title {
       font-size: 53px;
       line-height: 57px;
+    }
+    &__item{
+      width: 44%;
+      padding-right: 16px;
     }
   }
 }
