--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -184,10 +184,14 @@
         margin-bottom: 27px;
       }
     }
+    &__write-reviws{
+      top: 79px;
+      right: 0px;
+    }
   }
 
   .control {
-    bottom: 61px;
+    bottom: 104px;
     right: -2px;
   }
 
