--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -125,7 +125,10 @@
 
     &-wrapper {
       width: 668px;
-      padding: 55px 50px;
+      padding-top: 60px;
+      padding-left: 50px;
+      padding-right: 50px;
+      padding-bottom: 50px;
       display: flex;
       justify-content: space-between;
     }
@@ -143,6 +146,7 @@
     }
 
     &__logo {
+      margin-top: -5px;
       display: block;
     }
   }
