правка блоа о нас

--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -147,8 +147,11 @@
       line-height: 57px;
     }
     &__item{
-      width: 44%;
-      padding-right: 16px;
+      margin-right: 0;
+      box-sizing: border-box;
+      width: 50%;
+      padding-right: 45px;
+      margin-bottom: 35px;
     }
   }
 }
