--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -129,7 +129,7 @@
 @media @desktop-widths {
   .contacts {
     width: 875px;
-    margin: 26px auto 83px;
+    margin: 26px 49px 86px;
     padding-left: 175px;
     padding-top: 10px;
 
