--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -57,15 +57,13 @@
   display: inline-block;
   vertical-align: top;
 }
-.social-links__fb:hover{
+.social__icon-fb:hover{
   & path{
     fill: @color-icon-hover;
   }
 }
-.social-links__fb:active{
-  & path{
-    fill: @color-icon-active;
-  }
+.social__icon-fb:active{
+  fill: @color-icon-active;
 }
 
 .social-links__twitter {
@@ -106,7 +104,7 @@
 }
 .page-footer__logo-htmlacademy{
   position: absolute;
-  button: 0;
+  bottom: 0;
   &:hover{
     & path{
       fill: @color-icon-hover;
