--- a/less/blocks/user-info.less
+++ b/less/blocks/user-info.less
@@ -135,6 +135,9 @@
 @media @desktop-widths {
   .user-info {
     width: 1050px;
+    &__input-value{
+      padding-bottom: 13px;
+    }
 
     &__header {
       width: 16%;
