--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -34,6 +34,7 @@
   background: url("../img/video-mobile@1x.jpg") no-repeat;
   @media(min-resolution: 144dpi), (min-resolution: 1.5dppx) {
     background: url("../img/video-mobile@2x.jpg") no-repeat;
+    background-size:260px 150px;
   }
 }
 .video-player-wrapper{
@@ -103,6 +104,7 @@
     background: url("../img/video-tablet@1x.jpg") no-repeat;
     @media(min-resolution: 144dpi), (min-resolution: 1.5dppx) {
       background: url("../img/video-tablet@2x.jpg") no-repeat;
+      background-size: 668px 455px
     }
     &-wrapper{
       order: -1;
@@ -164,6 +166,7 @@
       background: url("../img/video-desktop@1x.jpg") no-repeat;
       @media(min-resolution: 144dpi), (min-resolution: 1.5dppx) {
       background: url("../img/video-desktop@2x.jpg") no-repeat;
+      background-size:682px 455px;
       }
       &-wrapper{
         width: 65%;
