--- a/less/blocks/user-info.less
+++ b/less/blocks/user-info.less
@@ -44,10 +44,11 @@
 }
 
 .user-info__input-value {
+  min-height: 18px;
   font-size: 17px;
   line-height: 18px;
   border: none;
-  margin-bottom: 15px;
+  padding-bottom: 16px;
   color: @form-text-color;
 }
 
@@ -121,12 +122,14 @@
   }
 
   .user-info__input-value {
+    min-height: 22px;
     padding-left: 18px;
     font-size: 19px;
     line-height: 18px;
     flex-grow: 1;
     border-bottom: 2px solid #000;
-    padding-bottom: 16px;
+    padding-bottom: 13px;
+    margin-bottom: 15px;
   }
 
 
@@ -136,6 +139,7 @@
   .user-info {
     width: 1050px;
     &__input-value{
+      min-height: 22px;
       padding-bottom: 13px;
     }
 
