поправк после проверки

--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -136,11 +136,14 @@
     &__wrapper {
       float: left;
       width: 40%;
-      height: 300px;
+      min-height: 300px;
+
     }
 
     &__write-us {
-      width: 346px;
+      float: left;
+      width: 26%;
+      margin-top: 56px;
     }
 
     &__list {
@@ -171,8 +174,6 @@
   }
 
   .contacts__write-us {
-    float: left;
-    width: 26%;
-    margin-top: 103px;
+
   }
 }
