--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -133,6 +133,7 @@
       & p {
         font-size: 17px;
         margin-bottom: 45px;
+        width: 90%;
       }
     }
 
@@ -156,7 +157,7 @@
   .control {
     position: absolute;
     bottom: 20px;
-    right: 3px;
+    right: 53px;
   }
 }
 @media @desktop-widths {
