--- a/less/blocks/catalog.less
+++ b/less/blocks/catalog.less
@@ -121,6 +121,7 @@
     & p {
       font-size: 15px;
       line-height: 30px;
+      padding-bottom: 84px;
     }
   }
 
@@ -163,12 +164,12 @@
     height: auto;
     position: relative;
     width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0 26px;
     box-sizing: border-box;
-
     & p {
-      padding-bottom: 40px;
+      padding-bottom: 84px;
     }
   }
 
